remove antisearchsource repo

--- a/client/views/app/menu-items/details/menu-item-details.html
+++ b/client/views/app/menu-items/details/menu-item-details.html
@@ -67,9 +67,6 @@
   <!-- /EDIT INGREDIENT -->
 
   <!-- SHOW LIST OF INGS AND PREPS -->
-  <div class="modal fade" id="showListOfIngs" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-       aria-hidden="true">
-    {{> render component = 'showListOfIngs'}}
-  </div>
+  {{> showListOfIngs}}
   <!-- /SHOW LIST OF INGS AND PREPS -->
 </template>
