--- a/client/views/app/common/ingredient-item-editor/editor-body/editor-body.html
+++ b/client/views/app/common/ingredient-item-editor/editor-body/editor-body.html
@@ -1,4 +1,4 @@
-<template name="submitIngredientBody">
+<template name="ingredientItemEditorBody">
   <form id="submitIngredientForm" class="form-horizontal" role="form">
     {{#with ingredient}}
       <div class="form-group">
