--- a/client/views/app/navigations/heading/heading.html
+++ b/client/views/app/navigations/heading/heading.html
@@ -4,7 +4,7 @@
 
     <div class="col-sm-6">
       {{#if headingToLoad}}
-        {{> Template.dynamic template=headingToLoad}}
+        {{> Template.dynamic template=headingToLoad data=templateData}}
       {{/if}}
     </div>
   </div>
