--- a/client/views/app/stock/stock-header/stock-header.html
+++ b/client/views/app/stock/stock-header/stock-header.html
@@ -1,7 +1,7 @@
 <template name="stockHeader">
   <div class="title-action">
     <a class="btn btn-primary" href="#ingredientItemEditor" data-toggle="modal">Add new stock</a>
-    {{#if state$isArchived}}
+    {{#if isArchived}}
       <a href="{{pathFor route='ingredientsList'}}" class="btn btn-info">
         <i class="fa fa-long-arrow-left"></i> Active Items
       </a>
