--- a/client/views/app/menu-items/details/ingredient-row/ingredient-quantity/ingredient-quantity.html
+++ b/client/views/app/menu-items/details/ingredient-row/ingredient-quantity/ingredient-quantity.html
@@ -1,3 +1,3 @@
-<template name="quantity">
-  <a href="#" class="quantity" data-url="/post">{{state$quantity}}</a>
+<template name="ingredientRowQuantityEditable">
+  <a href="#" class="quantity">{{quantity}}</a>
 </template>
