--- a/client/views/app/menu-items/details/ingredient-row/ingredient-row.html
+++ b/client/views/app/menu-items/details/ingredient-row/ingredient-row.html
@@ -12,7 +12,7 @@
     <td>{{type}}</td>
     <td>
       {{#if canEditMenu}}
-        {{> quantity quantity=quantity}}
+        {{> ingredientRowQuantityEditable quantity=quantity onQuantityEditableSuccess=getOnQuantityEditableSuccess}}
       {{else}}
         {{quantity}}
       {{/if}}
