--- a/client/views/app/stock/ingredients-list/ingredient-item/ingredient-item.html
+++ b/client/views/app/stock/ingredients-list/ingredient-item/ingredient-item.html
@@ -3,8 +3,8 @@
     <td>
       <a data-toggle="modal" class="btn btn-primary btn-sm editIngredient">View Item</a>
     </td>
-    <td>{{state$item.code}}</td>
-    <td>{{state$item.description}}</td>
+    <td>{{{state$item.code}}}</td>
+    <td>{{{state$item.description}}}</td>
     <td>{{supplierName state$item.suppliers}}</td>
     <td>{{state$item.portionOrdered}}</td>
     <td>${{state$item.costPerPortion}}</td>
