--- a/client/views/app/common/ingredient-item-editor/ingredient-item-editor.html
+++ b/client/views/app/common/ingredient-item-editor/ingredient-item-editor.html
@@ -7,8 +7,8 @@
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
                 class="sr-only">Close</span></button>
-            <h4 class="modal-title" id="myModalLabel">
-              {{#if ingredient}}
+            <h4 class="modal-title text-left" id="ingredientItemEditor">
+              {{#if isIngredientSet}}
                 {{#if canEditStock}} Edit {{/if}}
               {{else}}
                 Add
