--- a/client/views/app/job-items/list-view/job-items-list-view.html
+++ b/client/views/app/job-items/list-view/job-items-list-view.html
@@ -6,22 +6,17 @@
     <div class="row">
       <div class="col-md-12">
         <div class="tabs-container">
-          <ul class="nav nav-tabs jobtypesPanel">
-            {{#each jobTypes}}
-              <li class="{{#if equal name "Prep"}}active{{/if}}" data-id="{{_id}}">
-                <a href="#{{_id}}" data-toggle="tab">{{name}}</a>
-              </li>
-            {{/each}}
+          <ul class="nav nav-tabs job-types-panel">
+            <li id="Prep" class="active job-types-panel-item">
+              <a data-toggle="tab">Prep</a>
+            </li>
+            <li id="Recurring" class="job-types-panel-item">
+              <a data-toggle="tab">Recurring</a>
+            </li>
           </ul>
 
           <div class="tab-content">
-            {{#each jobTypes}}
-              <div class="tab-pane jobtypepanes {{#if equal name "Prep"}}active{{/if}}" id="{{_id}}">
-                <div class="panel-body">
-                  {{> jobItemsList id=_id}}
-                </div>
-              </div>
-            {{/each}}
+            {{> jobItemsList jobItemsListParams}}
           </div>
         </div>
       </div>
