--- a/client/views/app/job-items/master-list/item/job-items-master-list-item.html
+++ b/client/views/app/job-items/master-list/item/job-items-master-list-item.html
@@ -7,13 +7,13 @@
     </td>
     <td>{{{job.name}}}</td>
     <td>{{secondsToMinutes job.activeTime}} mins</td>
-    {{#if showSection}}
+    {{#if isRecurring}}
       <td>{{sectionById job.section}}</td>
       <td>{{jobFrequency}}</td>
     {{else}}
       <td>{{#if job.shelfLife}}{{job.shelfLife}} days {{else}} -NA- {{/if}}</td>
       <td>{{#if job.portions}} {{job.portions}} {{else}} -NA- {{/if}}</td>
-      <td>{{#if isPrep}}${{cost}}{{else}}-NA-{{/if}}</td>
+      <td>{{#if cost}}${{cost}}{{else}}-NA-{{/if}}</td>
     {{/if}}
   </tr>
 </template>
