--- a/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
+++ b/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
@@ -271,7 +271,7 @@
                 <div class="col-sm-10">
                   <div class="input-group m-b">
                     <input type="number" class="form-control active-time" placeholder="Active Time"
-                           value="{{jobItem.activeTime}}" required>
+                           value="{{activeTime}}" required>
                     <span class="input-group-addon">mins</span>
                   </div>
                 </div>
