--- a/client/views/app/common/ghost-editable-select/ghost-editable-select.html
+++ b/client/views/app/common/ghost-editable-select/ghost-editable-select.html
@@ -6,12 +6,8 @@
       </a>
     {{else}}
       <select class="ghost-editable-select">
-        {{# each state$values}}
-          {{# if isSelected value}}
-            <option value="{{value}}" selected>{{text}}</option>
-          {{else}}
-            <option value="{{value}}">{{text}}</option>
-          {{/if}}
+        {{#each values}}
+          <option {{optionAttrs}}>{{text}}</option>
         {{/each}}
       </select>
     {{/if}}
