fixes for stock take

--- a/client/lib/components/stock/modal_list/stock_list/view.html
+++ b/client/lib/components/stock/modal_list/stock_list/view.html
@@ -30,7 +30,7 @@
                 </thead>
                 <tbody>
                 {{#each state$getIngredients}}
-                  {{> render component='stockModalItem' stock=this name=state$name}}
+                  {{> render component='stockModalItem' stock=this name=state$name activeSpecialArea=state$activeSpecialArea}}
                 {{/each}}
                 </tbody>
               </table>
