--- a/client/views/app/stocktake/counting-view/counting-view-items/list/areas/area-filters/area-filters.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/list/areas/area-filters/area-filters.html
@@ -4,29 +4,23 @@
       {{> areaBox item=this
                   class="garea-filter"
                   name="garea"
-                  generalAreaExists=generalAreaExists
-                  specialAreaExists=specialAreaExists
-                  editStockTake=editable
-                  stocktakeId=stocktakeId
-                  activeGeneralArea=activeGeneralArea
-                  activeSpecialArea=activeSpecialArea}}
+                  stockTakeData=stockTakeData
+                  makeGeneralAreaActive=makeGeneralAreaActive
+                  makeSpecialAreaActive=makeSpecialAreaActive}}
       <div class="collapse" id="{{this._id}}">
         <div class="well">
           {{#each specialAreas this._id}}
             {{> areaBox item=this
                         class="sarea-filter"
                         name="sarea"
-                        generalAreaExists=generalAreaExists
-                        specialAreaExists=specialAreaExists
-                        editStockTake=editable
-                        stocktakeId=stocktakeId
-                        activeGeneralArea=activeGeneralArea
-                        activeSpecialArea=activeSpecialArea}}
+                        stockTakeData=stockTakeData
+                        makeGeneralAreaActive=makeGeneralAreaActive
+                        makeSpecialAreaActive=makeSpecialAreaActive}}
           {{else}}
             No Special Areas
             <br>
           {{/each}}
-          {{#if editable}}
+          {{#if stockTakeData.editableStockTake}}
             <a href="#" data-toggle="modal" class="btn btn-outline btn-primary col-md-12 no-margin addNewSpecialArea">Add</a>
             <br><br>
           {{/if}}
@@ -35,7 +29,7 @@
     {{else}}
       No General Areas
     {{/each}}
-    {{#if editable}}
+    {{#if stockTakeData.editableStockTake}}
       <a href="#addNewGeneralAreaModal" data-toggle="modal"
          class="btn btn-outline btn-primary col-md-12 no-margin">Add</a>
     {{/if}}
