--- a/client/views/app/stocktake/order-receipts/list/order-receipts-list.html
+++ b/client/views/app/stocktake/order-receipts/list/order-receipts-list.html
@@ -3,7 +3,7 @@
     <div class="ibox ">
       <div class="ibox-content">
         <div class="btn-group">
-          <a href="#" class="btn btn-white toBeReceived {{#if toBeReceived}} active {{/if}}">To be received</a>
+          <a href="#" class="btn btn-white toBeReceived {{#if orderToBeReceived}} active {{/if}}">To be received</a>
           <a href="#" class="btn btn-white received {{#if received}} active {{/if}}">Received</a>
         </div>
         <div class="btn-group">
