Replace jobItemsMasterType with jobItemsMaster

--- a/client/views/app/job-items/jobitems-header/list-header/job-items-list-header.html
+++ b/client/views/app/job-items/jobitems-header/list-header/job-items-list-header.html
@@ -16,7 +16,7 @@
         <ul class="dropdown-menu" style="margin-left: -56px;">
           {{#if canEditJob}}
             <li>
-              <a href="{{pathFor route='jobItemsMasterType' type='archive'}}">Archived
+              <a href="{{pathFor route='jobItemsMaster' type='archive'}}">Archived
                 Items</a>
             </li>
           {{/if}}
