--- a/client/views/app/stock/stock-header/stock-header.html
+++ b/client/views/app/stock/stock-header/stock-header.html
@@ -1,6 +1,6 @@
 <template name="stockHeader">
   <div class="title-action">
-    <a class="btn btn-primary" href="#ingredientItemEditor" data-toggle="modal">Add new stock</a>
+    <a class="btn btn-primary add-new-ingredient">Add new stock</a>
     {{#if isArchived}}
       <a href="{{pathFor route='ingredientsList'}}" class="btn btn-info">
         <i class="fa fa-long-arrow-left"></i> Active Items
@@ -20,9 +20,6 @@
             </li>
           </ul>
         </div>
-        <!-- ADD INGREDIENT-->
-          {{> ingredientItemEditor isModal=true}}
-        <!-- /ADD INGREDIENT -->
       {{/if}}
     {{/if}}
   </div>
