--- a/client/views/app/menu-items/submit/jobItems_list/job-items-list/job-items-list.html
+++ b/client/views/app/menu-items/submit/jobItems_list/job-items-list/job-items-list.html
@@ -1,6 +1,6 @@
 <template name="jobItemsModalList">
   <div class="modal-dialog">
-    <div class="modal-content" style="width: 130%">
+    <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
             class="sr-only">Close</span></button>
@@ -17,7 +17,6 @@
                 <th>Action</th>
                 <th>Name</th>
                 <th>Active Time (mins)</th>
-                <!-- <th>Cost per Portion ($)</th> -->
               </tr>
               </thead>
               <tbody>
