Fixed displaying of supplier ingredients modal

--- a/client/views/app/suppliers/supplier-profile/products/procucts-list.html
+++ b/client/views/app/suppliers/supplier-profile/products/procucts-list.html
@@ -21,7 +21,7 @@
   </div>
   <!-- EDIT INGREDIENT-->
   {{#if canViewStock}}
-      {{> ingredientItemEditor isModal=true ingredient=state$thisIngredient}}
+      {{> ingredientItemEditor isModal=true ingredient=state$ingredient}}
   {{/if}}
   <!-- /EDIT INGREDIENT -->
 </template>
