Ported add prep stock modal

--- a/client/views/app/menu-items/details/instructions/instructions.html
+++ b/client/views/app/menu-items/details/instructions/instructions.html
@@ -1,4 +1,4 @@
-<template name="menuInstructions">
+<template name="menuItemInstructions">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Instructions</h3>
