--- a/client/views/app/stock/ingredients-list/ingredients-list.html
+++ b/client/views/app/stock/ingredients-list/ingredients-list.html
@@ -30,7 +30,7 @@
         </table>
       </div>
       <p>
-        <a href="#" class="btn btn-block btn-outline btn-primary hide" id="loadMoreIngs">Load More</a>
+        <a href="#" class="btn btn-block btn-outline btn-primary" id="loadMoreIngs">Load More</a>
       </p>
     </div>
   </div>
