--- a/client/views/app/job-items/master-list/job-items-master-list.html
+++ b/client/views/app/job-items/master-list/job-items-master-list.html
@@ -1,7 +1,7 @@
 <template name="jobItemsList">
   <div class="row">
     <div class="col-sm-12">
-      <input type="text" name="searchJobItems" id="searchJobItemsBox" class="form-control col-sm-8"
+      <input type="text" class="form-control col-sm-8 search-job-items-box"
              placeholder="Search...">
     </div>
   </div>
