Removed component from invitation accept form

--- a/client/views/app/invitation-accept/invitation-accept.html
+++ b/client/views/app/invitation-accept/invitation-accept.html
@@ -6,7 +6,7 @@
       </div>
 
       <div class="at-pwd-form">
-        {{> render component="invitationAcceptForm" invitation=invitation}}
+        {{> invitationAcceptForm invitation=invitation}}
       </div>
     </div>
   </div>
