--- a/client/views/app/job-items/master-list/job-items-master-list.html
+++ b/client/views/app/job-items/master-list/job-items-master-list.html
@@ -26,7 +26,7 @@
         </thead>
         <tbody>
         {{#each jobItems}}
-          {{> jobItemDetailed jobitem=this type=type}}
+          {{> jobItemDetailed jobitem=this}}
         {{/each}}
         </tbody>
       </table>
