--- a/client/views/app/menu-items/list/menu-items-list.html
+++ b/client/views/app/menu-items/list/menu-items-list.html
@@ -1,6 +1,6 @@
 <template name="menuItemsListMainView">
   <!-- Page heading -->
-  {{> pageHeading title="Menus List" category='Menus' name="menulist"}}
+  {{> pageHeading title="Menus List" category='Menus' name="menuList"}}
 
   <div class="wrapper wrapper-content animated">
     {{> menuFilters}}
