--- a/client/views/app/menu-items/submit/submit-menu-item.html
+++ b/client/views/app/menu-items/submit/submit-menu-item.html
@@ -49,7 +49,7 @@
               </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label">Prep items used</label>
-                {{> listOfJobItems id="menuSubmit" name="menuSubmit"}}
+                {{> listOfJobItems}}
               </div>
 
               <div class="form-group">
