Removed components from roles

--- a/client/views/app/admin/admin.html
+++ b/client/views/app/admin/admin.html
@@ -1,6 +1,6 @@
 <template name="adminMainView">
   <!-- Page heading -->
-  {{> pageHeading title=title category="Settings" name=component}}
+  {{> pageHeading title=title category="Settings" name=title}}
 
   <div class="wrapper wrapper-content">
     <div class="row">
