--- a/client/views/app/admin/roles/add-role/add-role.html
+++ b/client/views/app/admin/roles/add-role/add-role.html
@@ -12,7 +12,7 @@
       <label class="col-sm-2 control-label">Permissions</label>
 
       <div class="col-sm-10 col-xs-12">
-        {{> render component="permissionsChecklist"}}
+        {{> permissionsChecklist}}
       </div>
     </div>
     <button type="submit" class="btn btn-primary col-sm-offset-2">Create</button>
