--- a/client/views/app/admin/roles/roles-list/roles-list.html
+++ b/client/views/app/admin/roles/roles-list/roles-list.html
@@ -8,8 +8,8 @@
     </tr>
     </thead>
     <tbody>
-    {{#each state$roles}}
-      {{>render component='roleItem' role=this}}
+    {{#each roles}}
+      {{> roleItem role=this}}
     {{/each}}
     </tbody>
   </table>
