--- a/client/views/app/admin/roles/roles.html
+++ b/client/views/app/admin/roles/roles.html
@@ -3,9 +3,9 @@
     <button class="btn btn-primary add-role">Add Role</button>
 
     <div class="add-role-container hide">
-      {{> render component="addRole"}}
+      {{> addRole}}
     </div>
 
-    {{>render component="rolesList"}}
+    {{> rolesList}}
   </div>
 </template>
