--- a/client/views/app/admin/roles/add-role/permission-checklist/permission-checklist.html
+++ b/client/views/app/admin/roles/add-role/permission-checklist/permission-checklist.html
@@ -1,5 +1,5 @@
 <template name="permissionsChecklist">
-  {{#each state$actions}}
+  {{#each actions}}
     <div class="col-xs-3 col-sm-4 col-md-4 col-lg-3">
       <div class="checkbox">
         <input type="checkbox" name="permissions" value="{{value}}" id="perm-{{value}}"/>
