Removed components from sections

--- a/client/views/app/admin/sections/view.html
+++ b/client/views/app/admin/sections/view.html
@@ -22,7 +22,7 @@
         </tr>
         </thead>
         <tbody>
-        {{#each state$sections}}
+        {{#each sections}}
           <tr>
             <td>
               <a href="#" class="editSection" data-id="{{_id}}">{{name}}</a>
