Removed components from sections

--- a/client/views/app/admin/sections/sections.html
+++ b/client/views/app/admin/sections/sections.html
@@ -23,14 +23,7 @@
         </thead>
         <tbody>
         {{#each sections}}
-          <tr>
-            <td>
-              <a href="#" class="editSection" data-id="{{_id}}">{{name}}</a>
-            </td>
-            <td>
-              <i class="fa fa-trash deleteSection"></i>
-            </td>
-          </tr>
+          {{> sectionItem section=this}}
         {{/each}}
         </tbody>
       </table>
