--- a/client/views/app/stock/modal-list/stock_list/modal-list-stock-list.html
+++ b/client/views/app/stock/modal-list/stock_list/modal-list-stock-list.html
@@ -13,11 +13,10 @@
           {{#if showAddStockItemMenu}}
             {{> ingredientItemEditor isModal=false}}
           {{else}}
-            <input type="text" class="form-control input-lg" id="searchText-box"
-                   placeholder="Search for stocks..."><br>
+            <input type="text" class="form-control input-lg search-input" placeholder="Search for stocks..."><br>
 
             <div class="row">
-              <table class="table table-striped">
+              <table class="table table-striped ingredients-table">
                 <thead>
                 <tr>
                   <th>Action</th>
@@ -34,6 +33,7 @@
                 {{/each}}
                 </tbody>
               </table>
+              <a href="#" class="btn btn-block btn-outline btn-primary load-more-items">Load More</a>
               <div class="alert alert-warning">If your stock item is not in the list,
                 <a class="alert-link add-new-ingredient">click here</a> to add it. Once you save it, it will appear next
                 time you search.
